14-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: sapp1.dev-helptapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port:
                  number: 80
    - host: sapp2.dev-helptapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port:
                  number: 80
  tls:
  - hosts:
    - sapp1.dev-helptapp.com
    secretName: sapp1-dev-helptapp-secret
  - hosts:
    - sapp2.dev-helptapp.com
    secretName: sapp2-dev-helptapp-secret
